<resources>
    <string name="app_name">Bookr</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="log_in">Log in</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="invalid_email">Invalid email</string>
    <string name="logging_in">Logging in</string>
    <string name="placeholder_2_sentences">Maecenas tempor elit vel mauris lobortis, nec mattis mauris imperdiet. Aenean laoreet nulla feugiat, maximus felis vitae, placerat risus.</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="username_taken">Username is taken</string>
    <string name="this_field_cannot_be_empty">This field cannot be empty</string>
    <string name="registration_complete">Registration complete</string>
    <string name="hint_title">Title</string>
    <string name="hint_author">Author</string>
    <string name="hint_publisher">Publisher</string>
    <string name="hint_price">Price</string>
    <string name="hint_description">Description</string>
    <string name="placeholder_book_title">Book Title</string>
    <string name="placeholder_book_reviewer_username">Book reviewer username</string>
    <string name="placeholder_book_author">by Book Author</string>
    <string name="placeholder_book_publisher">published by Book Publisher</string>
    <string name="placeholder_book_price">$1,000,000.00</string>
    <string name="add_book">Add Book</string>
    <string name="add_book_confirm_message">Add book</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_book_success">Successfully added book</string>
    <string name="add_book_failed">Failed to add book</string>
    <string name="delete_book_confirmation_message">Are you sure you want to delete this book?</string>
    <string name="delete_book">Delete Book</string>
    <string name="delete_book_success">Book deleted</string>
    <string name="delete_book_failed">Failed to delete book</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reviews"><u>Reviews</u></string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="write_a_review">Write a review</string>
    <string name="add_review_success">Review added</string>
    <string name="add_review_failed">Failed to add review</string>
    <string name="remove_review_confirmation_message">Are you sure you want to remove the review?</string>
    <string name="delete_review_success">Review deleted</string>
    <string name="delete_review_failed">Failed to delete review</string>
    <string name="delete_review">Delete review</string>
    <string name="by">by</string>
    <string name="published_by">published by</string>
    <string name="registration_successful">Registration successful</string>
    <string name="hint_image_url">Image url(optional)</string>
    <string name="register_header">Register</string>
    <string name="add_book_header">Add Book</string>
    <string name="failed_to_login">Failed to login</string>

</resources>
