<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.BookDetailsFragment"
    android:background="#FFFFFF">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/fragment_register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/fragment_register_password"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/hint_username"/>

            <EditText
                android:id="@+id/fragment_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/fragment_register_first_name"
                app:layout_constraintTop_toBottomOf="@+id/fragment_register_username"
                android:hint="@string/hint_password"/>

            <EditText
                android:id="@+id/fragment_register_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/fragment_register_last_name"
                app:layout_constraintTop_toBottomOf="@+id/fragment_register_password"
                android:hint="@string/hint_first_name"/>

            <EditText
                android:id="@+id/fragment_register_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_register_first_name"
                android:hint="@string/hint_last_name"/>


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>