<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.BookDetailsFragment"
    android:background="#FFFFFF">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/fragment_add_book_edit_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="@dimen/fragment_book_details_text_horizontal_padding"
                android:paddingRight="@dimen/fragment_book_details_text_horizontal_padding"
                android:hint="@string/hint_title"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/fragment_add_book_edit_text_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/fragment_book_details_text_horizontal_padding"
                android:paddingRight="@dimen/fragment_book_details_text_horizontal_padding"
                android:hint="@string/hint_author"
                app:layout_constraintTop_toBottomOf="@+id/fragment_add_book_edit_text_title" />

            <EditText
                android:id="@+id/fragment_add_book_edit_text_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/fragment_book_details_text_horizontal_padding"
                android:paddingRight="@dimen/fragment_book_details_text_horizontal_padding"
                android:hint="@string/hint_publisher"
                app:layout_constraintTop_toBottomOf="@+id/fragment_add_book_edit_text_author" />

            <EditText
                android:id="@+id/fragment_add_book_edit_text_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/fragment_book_details_text_horizontal_padding"
                android:paddingRight="@dimen/fragment_book_details_text_horizontal_padding"
                android:hint="@string/hint_price"
                app:layout_constraintTop_toBottomOf="@+id/fragment_add_book_edit_text_publisher"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/fragment_add_book_edit_text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="@dimen/fragment_book_details_text_horizontal_padding"
                android:paddingRight="@dimen/fragment_book_details_text_horizontal_padding"
                android:hint="@string/hint_description"
                app:layout_constraintTop_toBottomOf="@+id/fragment_add_book_edit_text_price"
                tools:layout_editor_absoluteX="0dp" />

            <Button
                android:id="@+id/fragment_add_book_button_add_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_book"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_add_book_edit_text_description" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>