<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddBookReviewFragment"
    android:background="#55000000"
    android:id="@+id/fragment_add_book_review_constraint_layout_root">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/card_bg_color">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <com.example.israel.build_week_1_bookr.custom_view.RatingView
                android:id="@+id/fragment_add_book_review_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rating="5"
                app:maxRating="5"
                app:emptySymbol="@drawable/avd_star_filled_to_empty"
                app:filledSymbol="@drawable/avd_star_empty_to_filled"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/fragment_add_book_review_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/write_a_review"
                android:minLines="5"
                app:layout_constraintTop_toBottomOf="@+id/fragment_add_book_review_rating_bar" />

            <Button
                android:id="@+id/fragment_add_book_review_button_add_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_add_book_review_edit_text"
                android:backgroundTint="@color/button_color"
                android:textColor="@color/button_text_color"/>

            <Button
                android:id="@+id/fragment_add_book_review_button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_add_book_review_edit_text"
                android:backgroundTint="@color/button_color"
                android:textColor="@color/button_text_color"/>

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>

<!--            <RatingBar
                android:id="@+id/fragment_add_book_review_rating_bar"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:numStars="5"
                android:progressTint="@color/rating_bar_color"
                android:rating="5"
                android:stepSize="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />-->